gestiono cambio entre pantallas, añado estilos minimos, obtengo numero de usuario con control de errores y deshabilito enter en el formulario

--- a/index.html
+++ b/index.html
@@ -5,11 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Selector 3000</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <div id="container">
+        <div id="pantalla-inicio">
+            <h1>SELECTOR 3000</h1>
+            <div class="boton-inicio" onclick="mainApp.cambiarPantalla('pantallaSeleccion')">Press Start!</div>
+        </div>
+        <div id="pantalla-seleccion">
+            <h2>Choose the number of participants!</h2>
+            <form id="formulario">
+                <input type="text" id="numero-personas" onkeydown="mainApp.controlEnter(event)">
+                <div class="boton" onclick="mainApp.cogerNumeroPersonas(event)">Generate participants!</div>
+            </form>
+        </div>
+        <div id="pantalla-carrera"></div>
+    </div>
 
-    
+
     <script src="./js/script.js"></script>
 </body>
 </html>
