--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
         <div id="pantalla-seleccion">
             <h2>Choose the number of participants!</h2>
             <form id="formulario">
-                <input type="text" id="numero-personas" onkeydown="mainApp.controlEnter(event)">
-                <div class="boton" onclick="mainApp.cogerNumeroPersonas()">Generate participants!</div>
-                <div id="show-race" class="button" onclick="mainApp.cambiarPantalla('pantallaCarrera')">Start Race!</div>
+                <input type="text" id="numero-personas" onkeydown="mainApp.controlEnter(event)" placeholder="Need a positive number here!">
+                <div class="boton" onclick="mainApp.prepararCarrera()">Generate participants!</div>
+                <div id="show-race" class="button" onclick="mainApp.cambiarPantalla('pantallaCarrera')">Show Race!</div>
             </form>
         </div>
-        <div id="pantalla-carrera"></div>
+        <div id="pantalla-carrera">
+            <div id="start-race">Start Race!</div>
+        </div>
     </div>
 
 
