creamos la carrera

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div id="show-race" class="boton" onclick="mainApp.cambiarPantalla('pantallaCarrera')">Show Race!</div>
         </div>
         <div id="pantalla-carrera">
-            <div id="start-race">Start Race!</div>
+            <div id="start-race" class="boton boton-empezar-carrera" onclick="mainApp.empezarCarrera()">Start Race!</div>
             <div id="listado-personas-carrera"></div>
         </div>
     </div>
